Chnage docker command for server